Fix nav layout bug

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,7 +26,7 @@
     
 }
 
-@media screen and (min-width: 660px) {
+@media screen and (min-width: 668px) {
   
   /*  HEADER*/
   nav {
